# voting-analytics-rabbitmq

./: .env.example  .gitignore  pyproject.toml
rabbitmq/: __init__.py
