[tool.poetry]
name = "voting-analytics-rabbitmq"
version = "0.1.0"
description = ""
authors = ["moreuo <98001570+moreuo@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
pandas = "^2.2.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
